# mmux-cyclone-scmobj

./: Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: macros.texi  mmux-cyclone-docs.style.css  mmux-cyclone-scmobj.texi
lib/: config.scm.in  mmux.cyclone.checks.sld  mmux.cyclone.scmobj.helpers.sld  mmux.cyclone.scmobj.sld  mmux.cyclone.scmobj.version.sld
meta/autoconf/: mmux-cyclone-scheme-check-library.m4  mmux-cyclone-scheme.m4
meta/automake/: cyclone-scheme-postlude.mk  cyclone-scheme-prelude.mk
tests/: test-scmobj.scm  test-version.scm
